feat: Initialize costume events creator test

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Template</title>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Custom Event System tests</title>
+    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-1.22.0.css">
 </head>
 <body>
-    <script src="js/main.js"></script>
+<div id="qunit"></div>
+<div id="qunit-fixture"></div>
+<script src="http://code.jquery.com/qunit/qunit-1.22.0.js"></script>
+<script src="js/events.js"></script>
+<script src="js/tests.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
